[package]
name = "rocksdb_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8.5"
rocksdb = "0.22.0"
tokio = { version = "1.37.0", features = ["sync", "rt", "net", "macros"] }
tracing = "0.1.40"
zipf = "7.0.1"
